Mon Mar 28 22:36:14 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/TypeCode_Constants.cpp:
	* tao/TypeCode_Constants.h:

	  Moved CORBA::_tc_{Value,Event}Base TypeCode constants to the
	  TAO_Valuetype library.

	* tao/Value_Box_TypeCode.h:
	* tao/Value_TypeCode.h:
	* tao/Value_TypeCode.inl:

	  Added missing "const" keywords to concrete type TypeCode
	  parameters and attribute.  Fixes compile-time errors.

	* tao/Valuetype/ValueBase.cpp:

	  Define TypeCode constants in terms of new TAO TypeCode
	  implementation.

	* tao/Valuetype/ValueBase.h:

	  Declared all TypeCode constants as "const".

	* tao/Valuetype/Valuetype_Adapter_Impl.cpp:

	  Removed "tao/Typecode.h" include directive.  That file no longer
	  exists, nor was it necessary.

Mon Mar 28 21:38:42 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/RefCount_Policy_Traits.h:

	  New set of trait templates that facilitate compile-time
	  selection of reference count related operations based on which
	  of TAO::{Null,True}_RefCount_Policy template policy classes is
	  used.

	* tao/Alias_TypeCode.cpp (~Alias):
	* tao/Sequence_TypeCode.cpp (~Sequence):
	* tao/Value_Box_TypeCode.cpp (~Value_Box):

	  Use the new TAO::RefCount_Policy_Traits<> template to make it
	  possible to completely elide a CORBA::release() function call on
	  the content type TypeCode when using the
	  TAO::Null_RefCount_Policy policy class.  Addresses
	  invalid CORBA::release() calls on static content type TypeCodes
	  that are destroyed before the above enclosing TypeCodes get a
	  chance to call CORBA::release() on them.  Fixes "pure virtual
	  method called" run-time errors upon process exit due to the
	  above TypeCode destructors calling CORBA::release() on their
	  previously destroyed static (i.e. declared as "static") content
	  type TypeCodes.

	* tao/Fixed_TypeCode.cpp:
	* tao/String_TypeCode.cpp:

	  Updated #include directives to conform to ACE/TAO coding
	  conventions.

	* tao/Makefile.am:
	* tao/tao.mpc:
