@@ -6,7 +6,9 @@
 #include "tao/ORB.h"
 #include "tao/ORB_Core.h"
 #include "tao/debug.h"
-#include "tao/Typecode.h"
+#include "tao/Null_RefCount_Policy.h"
+#include "tao/Alias_TypeCode.h"
+#include "tao/Value_TypeCode.h"
 #include "tao/CDR.h"
 
 #if !defined (__ACE_INLINE__)
@@ -322,98 +324,54 @@ CORBA::ValueBase::_tao_unmarshal_post (TAO_InputCDR &)
 
 
 // ================== Typecode initializations ==================
-static const CORBA::Long _oc_CORBA_ValueBase[] =
+
+namespace TAO
+{
+  namespace TypeCode
   {
-    TAO_ENCAP_BYTE_ORDER, // byte order
-    32,
-    ACE_NTOHL (0x49444c3a),
-    ACE_NTOHL (0x6f6d672e),
-    ACE_NTOHL (0x6f72672f),
-    ACE_NTOHL (0x434f5242),
-    ACE_NTOHL (0x412f5661),
-    ACE_NTOHL (0x6c756542),
-    ACE_NTOHL (0x6173653a),
-    ACE_NTOHL (0x312e3000),  // repository ID = IDL:omg.org/CORBA/ValueBase:1.0
-    10,
-    ACE_NTOHL (0x56616c75),
-    ACE_NTOHL (0x65426173),
-    ACE_NTOHL (0x65000000),  // name = ValueBase
-    0, // value modifier
-    CORBA::tk_null, // no stateful base valuetype
-    0, // member count
-  };
+    char const tc_value_base_id[]   = "IDL:omg.org/CORBA/ValueBase:1.0";
+    char const tc_value_base_name[] = "ValueBase";
+    Value<char const *,
+          Value_Field<char const *> const *,
+          CORBA::tk_value,
+          TAO::Null_RefCount_Policy> tc_ValueBase (tc_value_base_id,
+                                                   tc_value_base_name,
+                                                   CORBA::VM_NONE,
+                                                   &CORBA::_tc_null,
+                                                   0,  // Field array
+                                                   0); // Field count
 
+    char const tc_event_base_id[]   = "IDL:omg.org/CORBA/EventBase:1.0";
+    char const tc_event_base_name[] = "EventBase";
+    Value<char const *,
+          Value_Field<char const *> const *,
+          CORBA::tk_event,
+          TAO::Null_RefCount_Policy> tc_EventBase (tc_event_base_id,
+                                                   tc_event_base_name,
+                                                   CORBA::VM_NONE,
+                                                   &CORBA::_tc_null,
+                                                   0,  // Field array
+                                                   0); // Field count
 
-static const CORBA::Long _oc_CORBA_Visibility[] =
-  {
-    TAO_ENCAP_BYTE_ORDER, // byte order
-    33,
-    ACE_NTOHL (0x49444c3a),
-    ACE_NTOHL (0x6f6d672e),
-    ACE_NTOHL (0x6f72672f),
-    ACE_NTOHL (0x434f5242),
-    ACE_NTOHL (0x412f5669),
-    ACE_NTOHL (0x73696269),
-    ACE_NTOHL (0x6c697479),
-    ACE_NTOHL (0x3a312e30),
-    ACE_NTOHL (0x0),  // repository ID = IDL:omg.org/CORBA/Visibility:1.0
-    11,
-    ACE_NTOHL (0x56697369),
-    ACE_NTOHL (0x62696c69),
-    ACE_NTOHL (0x74790000),  // name = Visibility
-    CORBA::tk_short,
-  };
+    Alias<char const *,
+          TAO::Null_RefCount_Policy> tc_Visibility (
+     "IDL:omg.org/CORBA/Visibility:1.0",
+     "Visibility",
+     &CORBA::_tc_short);
 
-
-static const CORBA::Long _oc_CORBA_ValueModifier[] =
-  {
-    TAO_ENCAP_BYTE_ORDER, // byte order
-    36,
-    ACE_NTOHL (0x49444c3a),
-    ACE_NTOHL (0x6f6d672e),
-    ACE_NTOHL (0x6f72672f),
-    ACE_NTOHL (0x434f5242),
-    ACE_NTOHL (0x412f5661),
-    ACE_NTOHL (0x6c75654d),
-    ACE_NTOHL (0x6f646966),
-    ACE_NTOHL (0x6965723a),
-    ACE_NTOHL (0x312e3000),  // repository ID = IDL:omg.org/CORBA/ValueModifier:1.0
-    14,
-    ACE_NTOHL (0x56616c75),
-    ACE_NTOHL (0x654d6f64),
-    ACE_NTOHL (0x69666965),
-    ACE_NTOHL (0x72000000),  // name = ValueModifier
-    CORBA::tk_short,
-  };
+    Alias<char const *,
+          TAO::Null_RefCount_Policy> tc_ValueModifier (
+     "IDL:omg.org/CORBA/ValueModifier:1.0",
+     "ValueModifier",
+     &CORBA::_tc_short);
+  }
+}
 
 namespace CORBA
 {
-  static TypeCode _tao_valuetype_tk_val_tmp (CORBA::tk_value,
-                   sizeof (_oc_CORBA_ValueBase),
-                   (char *) &_oc_CORBA_ValueBase,
-                   0,
-                   sizeof (CORBA::ValueBase));
-
-
-  TypeCode_ptr _tc_ValueBase = &_tao_valuetype_tk_val_tmp;
-
-  static TypeCode _tao_valuetype_tk_vis_tmp (CORBA::tk_alias,
-                   sizeof (_oc_CORBA_Visibility),
-                   (char *) &_oc_CORBA_Visibility,
-                   0,
-                   sizeof (CORBA::Visibility));
-
-  TypeCode_ptr _tc_Visibility =
-  &_tao_valuetype_tk_vis_tmp;
-
-  static TypeCode _tao_valuetype_tk_vm_tmp (CORBA::tk_alias,
-                   sizeof (_oc_CORBA_ValueModifier),
-                   (char *) &_oc_CORBA_ValueModifier,
-                   0,
-                   sizeof (CORBA::ValueModifier));
-
-  TypeCode_ptr _tc_ValueModifier =
-  &_tao_valuetype_tk_vm_tmp;
+  TypeCode_ptr const _tc_ValueBase     = &TAO::TypeCode::tc_ValueBase;
+  TypeCode_ptr const _tc_Visibility    = &TAO::TypeCode::tc_Visibility;
+  TypeCode_ptr const _tc_ValueModifier = &TAO::TypeCode::tc_ValueModifier;
 }
 
 // member functions for CORBA::DefaultValueRefCountBase ============
