@@ -1,4 +1,9 @@
-Mon Mar 28 22:36:14 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+Mon Mar 28 22:49:58 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* tao/Alias_TypeCode.h:
+	* tao/Sequence_TypeCode.h:
+
+	  Improved const-correctness.
 
 	* tao/TypeCode_Constants.cpp:
 	* tao/TypeCode_Constants.h:
